--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ FetchContent_MakeAvailable(SFML)
 
 add_executable(main src/main.cpp)
 target_link_libraries(main PRIVATE sfml-graphics)
+target_include_directories(main PUBLIC ${CMAKE_SOURCE_DIR}/include)
 target_compile_features(main PRIVATE cxx_std_17)
 
 if(WIN32)
